<resources>
    <string name="app_name">Information Card Activity</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logoplaceholder">LogoPlaceholder</string>
    <string name="name">Moutasim El Ayoubi</string>
    <string name="title">Software Engineer</string>
    <string name="phone_icon">phone icon</string>
    <string name="mail_icon">mail icon</string>
    <string name="phone_no">+971 55 555 5555</string>
    <string name="email_address">moutasim9997@gmail.com</string>
</resources>